<resources>
    <string name="app_name" translatable="false">Boolder</string>

    <string name="tab_map">Map</string>
    <string name="tab_discover">Discover</string>
    <string name="tab_tick_list">Tick List</string>
    <string name="tab_contribute">Contribute</string>

    <string name="search_query_hint">Problem or area name</string>
    <string name="cd_find_my_position">Find my position</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_search">Cancel search</string>
    <string name="cd_go_back">Go Back</string>
    <string name="cd_boolder_picture">Topo photo</string>
    <string name="cd_type">Problem type</string>
    <string name="rational_title">Share location?</string>
    <string name="rationale_message">Your location will be displayed on the map to help you find your way around.</string>
    <string name="rationale_positive_btn">Share location</string>
    <string name="rationale_negative_Btn">Maybe later</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="bleau_info">Bleau.info</string>
    <string name="report">Report</string>


    <string name="circuit_short_name_yellow">Yellow</string>
    <string name="circuit_short_name_purple">Purple</string>
    <string name="circuit_short_name_orange">Orange</string>
    <string name="circuit_short_name_green">Green</string>
    <string name="circuit_short_name_blue">Blue</string>
    <string name="circuit_short_name_skyblue">Sky blue</string>
    <string name="circuit_short_name_salmon">Salmon</string>
    <string name="circuit_short_name_red">Red</string>
    <string name="circuit_short_name_white">White</string>
    <string name="circuit_short_name_white_for_kids">White</string>
    <string name="circuit_short_name_black">Black</string>
    <string name="circuit_short_name_off_circuit">Off circuit</string>
    <string name="contact_mail" translatable="false">hello@boolder.com</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_result">No result</string>
    <string name="query_examples">Examples:</string>
    <string name="category_area">Areas</string>
    <string name="category_problem">Problems</string>
    <string name="sit_start">sit start</string>
    <string name="pois_bs_open">See in Google Maps</string>
    <string name="pois_bs_close">Close</string>

    <plurals name="variant">
        <item quantity="one">%d variant</item>
        <item quantity="other">%d variants</item>
    </plurals>

    <string name="stepness_wall">Wall</string>
    <string name="stepness_slab">Slab</string>
    <string name="stepness_overhang">Overhang</string>
    <string name="stepness_roof">Roof</string>
    <string name="stepness_traverse">Traverse</string>
    <string name="stepness_other">Other</string>
    <string name="steepness">Steepness</string>
    <string name="filter_steepness_count">Steepness (%d)</string>

    <string name="topo_action_project_add">Add to projects</string>
    <string name="topo_action_project_remove">Remove from projects</string>
    <string name="topo_action_tick">Tick</string>
    <string name="topo_action_untick">Untick</string>

    <string name="tags_popular">Popular</string>
    <string name="tags_beginner_friendly">Beginner friendly</string>
    <string name="tags_family_friendly">Family friendly</string>
    <string name="tags_dry_fast">Dry fast</string>

    <string name="poi_distance_in_min">%d min</string>

    <string name="no_name">No name</string>

    <string name="circuit">%s circuit</string>
    <string name="circuits">Circuits</string>
    <string name="circuit_start">Circuit start</string>
    <string name="no_circuit_available">No circuit available for this area</string>

    <string name="grade">Grade</string>
    <string name="grades">Grades</string>
    <string name="beginner">Beginner</string>
    <string name="grade_min">Min grade</string>
    <string name="grade_max">Max grade</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="custom">Custom</string>

    <string name="filter_popular">Popular</string>
    <string name="filter_projects">Projects</string>
    <string name="filter_ticked">Ticked</string>
    <string name="filter_warning_no_projects_message">Add your first project to use this filter.</string>
    <string name="filter_warning_no_projects_title">You don\'t have any projects yet</string>
    <string name="filter_warning_no_ticks_message">Tick your first problem to use this filter.</string>
    <string name="filter_warning_no_ticks_title">You don\'t have any ticks yet</string>

    <string name="area_overview_area_info">Area info</string>
    <string name="area_overview_problems">Problems</string>
    <string name="area_overview_levels">Levels</string>
    <string name="area_overview_download_photos">Download photos</string>
    <string name="area_overview_cancel_download">Cancel download</string>
    <string name="area_overview_delete_photos">Delete photos</string>
    <string name="area_overview_download_in_progress">Download in progress…</string>
    <string name="area_overview_downloaded_photos">Downloaded photos (%s)</string>
    <string name="area_overview_photos_deletion_dialog_title">Warning</string>
    <string name="area_overview_photos_deletion_dialog_text">Are you sure to delete the downloaded photos?</string>
    <string name="area_overview_photos_deletion_dialog_confirm_button">Delete</string>
    <string name="area_overview_photos_deletion_dialog_cancel_button">Cancel</string>
    <string name="area_overview_error_cannot_display_area">Can\'t display information for this area</string>
    <string name="area_circuit_beginner_friendly">This circuit is beginner friendly</string>
    <string name="area_circuit_dangerous">This circuit is dangerous: some boulders are very high and/or with difficult landings</string>
    <string name="area_circuit_see_on_map">See on the map</string>
    <string name="area_problems_error_cannot_display_area">Can\'t display the boulder problems for this area</string>
    <string name="area_problems_tab_all">All</string>
    <string name="area_problems_tab_popular">Popular</string>

    <string name="discover_header_item_beginner_guide">Beginner\'s guide</string>
    <string name="discover_header_item_dries_fast">Dries fast</string>
    <string name="discover_header_item_per_level">For your level</string>
    <string name="discover_header_item_train_and_bike">Accessible by train + bike</string>
    <string name="discover_section_all_areas">All areas</string>
    <string name="discover_section_popular_areas">Popular</string>
    <string name="discover_section_support">Want to help?</string>
    <string name="discover_snackbar_no_browser_found">No browser found, can\'t open the link</string>
    <string name="discover_support_rate">Rate the app</string>
    <string name="discover_support_contribute">Contribute</string>

    <string name="top_areas_levels_all_areas">All areas</string>
    <string name="top_areas_levels_beginner_friendly">Beginner friendly</string>
    <string name="top_areas_levels_beginner_friendly_intro">Areas with beginner friendly circuits:</string>
    <string name="top_areas_dry_fast_description">These areas dry faster than most areas thanks to the sun &amp; wind exposure</string>
    <string name="top_areas_dry_fast_warning">Don\'t climb if the rock is still wet, you may damage it</string>
    <string name="top_areas_dry_fast_useful_link">Useful link:</string>
    <string name="top_areas_train_and_bike_intro">Bike time from the station:</string>

    <string name="tick_list_action_export">Export</string>
    <string name="tick_list_action_import">Import</string>
    <string name="tick_list_filter_both">Both</string>
    <string name="tick_list_filter_favorites">Favorites</string>
    <string name="tick_list_filter_ticked">Ticked</string>
    <string name="tick_list_dialog_importation_button_cancel">Cancel</string>
    <string name="tick_list_dialog_importation_button_delete">Delete</string>
    <string name="tick_list_dialog_importation_button_keep">Keep</string>
    <string name="tick_list_dialog_importation_message">Do you want to keep or delete your current list?</string>
    <string name="tick_list_dialog_importation_title">Importation</string>
    <string name="tick_list_dialog_overwriting_importation_message">Are you sure to import a new tick list and delete the current one?</string>
    <string name="tick_list_dialog_overwriting_importation_no">No</string>
    <string name="tick_list_dialog_overwriting_importation_yes">Yes</string>
    <string name="tick_list_empty_state_body">Your projects and ticks will appear here.</string>
    <string name="tick_list_empty_filter_favorites">No favorites to show.</string>
    <string name="tick_list_empty_filter_ticked">No ticks to show.</string>
    <string name="tick_list_error_import_malformed_input">The file is malformed and can\'t be imported.</string>
    <string name="tick_list_error_import_cant_be_read">The file can\'t be read.</string>

    <string name="contribute_title">Contribute to Boolder</string>
    <string name="contribute_intro">Help us build the best collaborative guidebook for Fontainebleau!</string>
    <string name="contribute_photo">Take photos of missing boulders</string>
    <string name="contribute_report">Report errors</string>
    <string name="contribute_cta">Start contributing</string>
    <string name="contribute_learn_more">Learn more about Boolder</string>

    <string name="full_screen_photo_error">This photo can\'t be displayed</string>

    <string name="cd_circuit_previous_boulder_problem">Circuit\'s previous boulder problem</string>
    <string name="cd_circuit_next_boulder_problem">Circuit\'s next boulder problem</string>

</resources>
